# gplugins

./: .bumpversion.cfg  .dockerignore  .gitignore  .lychee.toml  .pre-commit-config.yaml  .python-version  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  install_luminescent.sh  pyproject.toml  rewrite.py
.github/: .lychee.toml  CODEOWNERS  copilot-instructions.md  install_meep.sh  release-drafter.yml  test_doc_errors.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: copilot-setup-steps.yml  pages.yml  release-drafter.yml  release.yml  stale.yml  test_code.yml  test_code_conda.yml  test_code_coverage.yml  test_docs.yml
docs/: _config.yml  _toc.yml  api.rst  api_design.rst  api_verification.rst  bibliography.bib  changelog.md  myst.yml  plugins_circuits.md  plugins_fdtd.md  plugins_mesh.md  plugins_mode_solver.md  plugins_optimization.md  plugins_process.md  sdl.md  tutorial.md  workflow.md
docs/notebook_/: fdtdz_01.py  lumerical_2_interconnect.py  palace_01_electrostatic.py  pso.py
docs/notebooks/: 11_get_netlist.py  11_get_netlist_spice.py  12_database.py  20_schematic_driven_layout.py  devsim_01_pin_waveguide.py  elmer_01_electrostatic.py  fdtdz_01.py  femwell_01_modes.py  femwell_02_heater.py  klayout_dataprep.py  klayout_drc.py  lumerical_1_fdtd_sparameters.py  lumerical_2_interconnect.py  materials.py  meep_01_sparameters.py  meep_02_gratings.py  meep_03_fields.py  meow_01.py  meshing_01_intro.py  meshing_02_2D_xy_mesh.py  meshing_03_2D_uz_mesh.py  meshing_04_refinement.py  meshing_05_3D.py  mpb_001_mpb_waveguide.py  palace_01_electrostatic.py  palace_02_fullwave.py  path_length_analysis.py  pso.py  ray_optimiser.py  sax_01_sax.py  sax_02_model_extraction.py  sax_03_variability_analysis.py  tcad_02_analytical_process.py  tcad_03_numerical_implantation.py  tidy3d_00_tidy3d.py  tidy3d_01_tidy3d_modes.py  vlsir_netlist.py  workflow_0_layout_summary.py  workflow_1_mzi.py  workflow_2_ring.py  (+1 more)
gplugins/: __init__.py  add_simulation_markers.py  async_utils.py  config.py  get_effective_indices.py  get_sparameters_path.py  plot.py  plot_csv.py  typings.py
gplugins/SiEPIC/: tests.py  verification.py
gplugins/common/: config.py  types.py
gplugins/dagster/: workflow.py
gplugins/database/: db_upload.py  models.py
gplugins/devsim/: __init__.py  doping.py  get_simulation.py  get_simulation_xsection.py  get_solver.py  test_devsim.py
gplugins/elmer/: __init__.py  electrostatic.sif.j2  get_capacitance.py
gplugins/eme/: __init__.py  meow_eme.py  test_meow_simulation.py
gplugins/emode/: __init__.py  utils.py
gplugins/fdtd/: OLD_WORKFLOW.md  README.md  __init__.py  geometry.py  render2d.py  render3d.py  simulation.py
gplugins/fdtdz/: __init__.py  get_epsilon_fdtdz.py  get_ports_fdtdz.py  get_sparameters_fdtdz.py
gplugins/fem/: __init__.py  mesh.msh  mode_solver.py  solve_thermal.py  test_mode_solver.py
gplugins/femwell/: __init__.py  mode_solver.py  solve_thermal.py  test_mode_solver.py
gplugins/gfviz/: Makefile  __init__.py  b64.py  gfviz.py  netlist.py  serve.py
gplugins/gmeep/: __init__.py  async_utils.py  get_material.py  get_meep_geometry.py  get_port_eigenmode.py  get_simulation.py  get_simulation_grating_farfield.py  get_simulation_grating_fiber.py  meep_adjoint_optimization.py  test_eigenmode.py  test_materials.py  test_write_sparameters_meep.py  write_sparameters_grating.py  write_sparameters_meep.py  write_sparameters_meep_batch.py  write_sparameters_meep_mpi.py
gplugins/gmsh/: __init__.py  break_geometry.py  define_polysurfaces.py  get_mesh.py  mesh.py  meshtracker.py  parse_component.py  parse_gds.py  parse_layerstack.py  uz_xsection_mesh.py  xy_xsection_mesh.py  xyz_mesh.py
gplugins/gtidy3d/: __init__.py  get_results.py  get_simulation.py  get_simulation_grating_coupler.py  materials.py  modes.py  utils.py  write_sparameters.py  write_sparameters_grating_coupler.py
gplugins/hdl21/: __init__.py  netlist.py  sky130.py
gplugins/klayout/: get_density.py  get_netlist.py  netlist_graph.py  netlist_spice_reader.py  plot_nets.py
gplugins/lumerical/: README.md  __init__.py  interconnect.py  mapping_ubcpdk.yml  read.py  spice_to_yaml.py  test_read_sparameters.py  write_sparameters_lumerical.py  write_sparameters_lumerical_components.py  write_sparameters_lumerical_from_sax.py
gplugins/materials/: inorganic.py
gplugins/meow/: __init__.py  meow_eme.py  test_meow_simulation.py
gplugins/meshwell/: __init__.py  get_meshwell_3D.py  get_meshwell_cross_section.py
gplugins/modes/: __init__.py  coupler.py  find_coupling_vs_gap.py  find_mode_dispersion.py  find_modes.py  find_modes_cross_section.py  find_neff_ng_dw_dh.py  find_neff_vs_width.py  get_mode_solver_coupler.py  get_mode_solver_cross_section.py  get_mode_solver_rib.py  neff_convergence_test.py  overlap.py  types.py  waveguide.py
gplugins/palace/: __init__.py  driven.json  electrostatic.json  get_capacitance.py  get_scattering.py  (+2 more)
notebooks/: 11_get_netlist.ipynb  11_get_netlist_spice.ipynb  20_schematic_driven_layout.ipynb  20_sky130nm_inverter_schematic_to_layout.ipynb  21_schematic_driven_layout_lumerical.ipynb  22_sky130nm_inverter_schematic_to_layout.ipynb  devsim_01_pin_waveguide.ipynb  elmer_01_electrostatic.ipynb  emode.ipynb  fdtdz_01.ipynb  femwell_01_modes.ipynb  femwell_02_heater.ipynb  klayout_dataprep.ipynb  klayout_drc.ipynb  lumerical_1_fdtd_sparameters.ipynb  lumerical_2_interconnect.ipynb  luminescent.ipynb  meep_01_sparameters.ipynb  meep_02_gratings.ipynb  meep_03_fields.ipynb  meow_01.ipynb  meshing_01_intro.ipynb  meshing_02_2D_xy_mesh.ipynb  meshing_03_2D_uz_mesh.ipynb  meshing_04_refinement.ipynb  meshing_05_3D.ipynb  mode_solver_fdfd.ipynb  mpb_001_mpb_waveguide.ipynb  palace_01_electrostatic.ipynb  palace_02_fullwave.ipynb  path_length_analysis.ipynb  pso.ipynb  ray_optimiser.ipynb  sax_01_sax.ipynb  sax_02_model_extraction.ipynb  sax_03_variability_analysis.ipynb  sdl_demo.pic.yml  tcad_02_analytical_process.ipynb  tcad_03_numerical_implantation.ipynb  test-fdtd.ipynb  (+7 more)
pcell/: test.py
tests/: test_lumerical_read_sparameters.py
(+264 files in other folders)
