# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
authors = [
  {name = "gdsfactory", email = "contact@gdsfactory.com"}
]
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent"
]
dependencies = [
  "gdsfactory[cad]>=7.8.1,<7.9",
  "pint"
]
description = "gdsfactory plugins"
keywords = ["python"]
license = {file = "LICENSE"}
name = "gplugins"
readme = "README.md"
requires-python = ">=3.10"
version = "0.8.5"

[project.optional-dependencies]
dagster = ["dagster", "dagit"]
database = [
  "sqlalchemy",
  "sqlalchemy-utils",
  # "sqlmodel>=0.0.8,<0.1",
  "boto3",
  "pymysql"
]
dev = [
  "pre-commit",
  "pytest",
  "pytest-cov",
  "pytest_regressions",
  "jsondiff",
  "mypy",
  "pyswarms",
  "autograd",
  "hyperopt",
  "tbump",
  "towncrier",
  "ray"
]
devsim = [
  "devsim",
  "pyvista<=0.40",
  "tidy3d>=2.4.0,<2.5.0"
]
docs = [
  "jupytext",
  "matplotlib",
  "jupyter-book==0.15.1",
  "pyvista[jupyter]<=0.40"
]
femwell = [
  "femwell>=0.1.6,<0.8.5",
  "meshwell>=1.0.0,<1.1.0"
]
gmsh = [
  "gmsh",
  "h5py",
  "mapbox_earcut",
  "meshio",
  "pygmsh",
  "pyvista<=0.40",
  "trimesh",
  "shapely",
  "meshwell>=1.0.0,<1.1.0"
]
klayout = [
  "kfactory[git,ipy]>=0.9.3,<0.10"
]
meow = [
  "jaxlib",
  "jax",
  "meow-sim>0.8,<0.9",
  "tidy3d>=2.4.0,<2.5.0"
]
sax = [
  "jaxlib",
  "jax",
  "sax>=0.10.3,<0.11.0",
  "scikit-learn"
]
schematic = [
  "bokeh",
  "natsort"
]
tidy3d = [
  "tidy3d>=2.4.0,<2.5.0"
]
vlsir = [
  "vlsir>=4.0.0,<5.0.0",
  "vlsirtools>=4.0.0,<5.0.0"
]
web = [
  "jinja2",
  "python-multipart",
  "fastapi>=0.102.0,<1",
  "uvicorn[standard]"
]

[tool.black]
exclude = '''  # Specify the files/dirs that should be ignored by the black formatter
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | env
  | _build
  | buck-out
  | build
  | dist
)/
'''
include = '\.pyi?$'
line-length = 88
target-version = ['py310']

[tool.codespell]
ignore-words-list = "te, te/tm, te, ba, fpr, fpr_spacing, ro, nd, donot, schem"

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pylsp-mypy]
enabled = true
live_mode = true
strict = true

[tool.pytest.ini_options]
addopts = '--tb=short'
norecursedirs = [
  "extra/*.py",
  'gplugins/dagster',
  'gplugins/database',
  'gplugins/devsim',
  'gplugins/sax/integrations',
  'gplugins/tidy3d/tests/tests_sparameters',
  'gplugins/fdtdz'
]
python_files = ["gplugins/*.py", "notebooks/*.ipynb", "tests/*.py"]
testpaths = ["gplugins/", "tests"]

[tool.ruff]
fix = true
ignore = [
  "E501",  # line too long, handled by black
  "B008",  # do not perform function calls in argument defaults
  "C901",  # too complex
  "B905",  # `zip()` without an explicit `strict=` parameter
  "C408",  # C408 Unnecessary `dict` call (rewrite as a literal)
  "E402",  # module level import not at top of file
  "B018",  # found useless expression
  "B028"  # no explicit stacklevel
]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "C",  # flake8-comprehensions
  "B",  # flake8-bugbear
  "UP"
]

[tool.ruff.per-file-ignores]
"docs/notebooks/meep_01_sparameters.py" = ["F821", 'E402']
"docs/notebooks/tcad_02_analytical_process.py" = ["F821", 'E402', 'F405', 'F403']

[tool.ruff.pydocstyle]
convention = "google"

[tool.setuptools.package-data]
mypkg = ["*.csv", "*.yaml"]

[tool.setuptools.packages]
find = {}

[tool.tbump]

[[tool.tbump.before_commit]]
cmd = "towncrier build --yes --version {new_version}"
name = "create & check changelog"

[[tool.tbump.before_commit]]
cmd = "git add CHANGELOG.md"
name = "create & check changelog"

[[tool.tbump.before_commit]]
cmd = "grep -q -F {new_version} CHANGELOG.md"
name = "create & check changelog"

[[tool.tbump.file]]
src = "README.md"

[[tool.tbump.file]]
src = "pyproject.toml"

[[tool.tbump.file]]
src = "gplugins/__init__.py"

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[tool.tbump.version]
current = "0.8.5"
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  '''

[tool.towncrier]
directory = ".changelog.d"
filename = "CHANGELOG.md"
issue_format = "[#{issue}](https://github.com/gdsfactory/gplugins/issues/{issue})"
start_string = "<!-- towncrier release notes start -->\n"
template = ".changelog.d/changelog_template.jinja"
title_format = "## [{version}](https://github.com/gdsfactory/gplugins/releases/tag/v{version}) - {project_date}"
underlines = ["", "", ""]

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true
