# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[lint.per-file-ignores]
"docs/notebooks/*.py" = ["F821", 'E402', 'F405', 'F403']
"docs/notebooks/meep_01_sparameters.py" = ["F821", 'E402']
"docs/notebooks/tcad_02_analytical_process.py" = ["F821", 'E402', 'F405', 'F403']

[lint.pydocstyle]
convention = "google"

[project]
authors = [
  {name = "gdsfactory", email = "contact@gdsfactory.com"}
]
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent"
]
dependencies = [
  "gdsfactory>=8.5.3",
  "pint",
  "gdstk",
  "tqdm"
]
description = "gdsfactory plugins"
keywords = ["python"]
license = {file = "LICENSE"}
name = "gplugins"
readme = "README.md"
requires-python = ">=3.10"
version = "1.1.2"

[project.optional-dependencies]
dagster = ["dagster", "dagit"]
dev = [
  "pre-commit",
  "pytest",
  "pytest-cov",
  "pytest_regressions",
  "jsondiff",
  "mypy",
  "pyswarms",
  "autograd",
  "hyperopt",
  "tbump",
  "towncrier",
  "ray"
]
devsim = [
  "devsim",
  "pyvista<=0.43.8",
  "tidy3d>=2.5.2,<2.8"
]
docs = [
  "jupytext",
  "matplotlib",
  "jupyter-book~=1.0",
  "pyvista[all,trame]<=0.43.8"
]
femwell = [
  "femwell~=0.1.11",
  "meshwell~=1.0.7"
]
gfviz = [
  "jinja2",
  "fastapi",
  "shapely",
  "natsort"
]
gmsh = [
  "gmsh==4.13.0",
  "h5py",
  "mapbox_earcut",
  "meshio",
  "pygmsh",
  "pyvista<=0.43.8",
  "trimesh",
  "shapely",
  "meshwell~=1.0.7"
]
klayout = [
  "klayout",
  "pyvis<=0.3.1"
]
meow = [
  "jax>=0.4.26",
  "jaxlib>=0.4.26",
  "flax>=0.8.2",
  "meow-sim~=0.11.0",
  "tidy3d>=2.5.2,<2.8"
]
sax = [
  "jax>=0.4.26",
  "jaxlib>=0.4.26",
  "flax>=0.8.2",
  "sax~=0.13.1",
  "scikit-learn",
  "pyvis<=0.3.1"
]
schematic = [
  "bokeh",
  "ipywidgets",
  "natsort"
]
tidy3d = [
  "tidy3d>=2.5.2,<2.8",
  "meshio",
  "meshwell~=1.0.7"
]
vlsir = [
  "vlsir~=6.0",
  "vlsirtools~=6.0"
]

[tool.codespell]
ignore-words-list = 'te, te/tm, te, ba, fpr, fpr_spacing, ro, nd, donot, schem, Ue'
skip = 'notebooks/palace_02_fullwave.ipynb'

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pylsp-mypy]
enabled = true
live_mode = true
strict = true

[tool.pyright]
reportUnusedExpression = false

[tool.pytest.ini_options]
addopts = '--tb=short'
norecursedirs = [
  "extra/*.py",
  'gplugins/dagster',
  'gplugins/devsim',
  'gplugins/sax/integrations',
  'gplugins/tidy3d/tests/tests_sparameters',
  'gplugins/fdtdz',
  'gplugins/elmer',
  'gplugins/sentaurus',
  'gplugins/gfviz',
  'gplugins/gmeep',
  'gplugins/modes'
]
python_files = ["gplugins/*.py", "notebooks/*.ipynb", "tests/*.py"]
testpaths = ["gplugins/", "tests"]

[tool.ruff]
fix = true
lint.ignore = [
  "E501",  # line too long, handled by black
  "B008",  # do not perform function calls in argument defaults
  "C901",  # too complex
  "B905",  # `zip()` without an explicit `strict=` parameter
  "C408",  # C408 Unnecessary `dict` call (rewrite as a literal)
  "E402",  # module level import not at top of file
  "B018",  # found useless expression
  "B028",  # no explicit stacklevel
  "D301"  # allow escape sequences in docstrings
]
lint.select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "C",  # flake8-comprehensions
  "B",  # flake8-bugbear
  "T10",  # flake8-debugger
  "UP"
]

[tool.setuptools.package-data]
mypkg = ["*.csv", "*.yaml"]

[tool.setuptools.packages]
find = {}

[tool.tbump]

[[tool.tbump.before_commit]]
cmd = "towncrier build --yes --version {new_version}"
name = "create & check changelog"

[[tool.tbump.before_commit]]
cmd = "git add CHANGELOG.md"
name = "create & check changelog"

[[tool.tbump.before_commit]]
cmd = "grep -q -F {new_version} CHANGELOG.md"
name = "create & check changelog"

[[tool.tbump.file]]
src = "README.md"

[[tool.tbump.file]]
src = "pyproject.toml"

[[tool.tbump.file]]
src = "gplugins/__init__.py"

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[tool.tbump.version]
current = "1.1.2"
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  '''

[tool.towncrier]
directory = ".changelog.d"
filename = "CHANGELOG.md"
issue_format = "[#{issue}](https://github.com/gdsfactory/gplugins/issues/{issue})"
start_string = "<!-- towncrier release notes start -->\n"
template = ".changelog.d/changelog_template.jinja"
title_format = "## [{version}](https://github.com/gdsfactory/gplugins/releases/tag/v{version}) - {project_date}"
underlines = ["", "", ""]

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true
